<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SalesPerson</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="password">Please enter your password</string>
    <string name="eamil">please enter your email id</string>
    <string name="email">Enter your email id</string>
    <string name="pass">Enter your pasword</string>
    <string name="title_activity_post_login">PostLoginActivity</string>
    <string name="oppertunites">Oppertunites</string>
    <string name="task">Task</string>
    <string name="personal_settings">PersonalSettings</string>
    <string name="list">ListItem1</string>
    <string name="addOppertuniites">AddOppertuniites</string>
    <string name="title_activity_add_opertunities">AddOpertunitiesActivity</string>
    <string name="projectTitle">ProjectTitle</string>
    <string name="description">ProjectDescription</string>
    <string name="contact">Name of Contact Person</string>
    <string name="designation">Designation</string>
    <string name="address1">Address1</string>
    <string name="address2">Address2</string>
    <string name="county">County</string>
    <string name="compcode">Comp Code</string>
    <string name="town">Town/City</string>
    <string name="postcode">Post Code</string>
    <string name="dayphone">Day Phone</string>
    <string name="eveningphone">Evening Phone</string>
    <string name="other">OtherInformation</string>
    <string name="next">Next</string>
    <string name="logout">Logout</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="create">Create</string>
    <string name="insert">Insert</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="select">Select</string>
    <string name="clear">Clear</string>
    <string name="sign">Signature</string>
    <string name="status">Status</string>
    <string name="date">Date</string>

</resources>
