<TableLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
             android:shrinkColumns="*"
            android:background="#ffffff">
<!--             android:shrinkColumns="*"  android:stretchColumns="*"  -->

                        <!--projectTitle-->
                        
                        
                        <TableRow
                            android:layout_height="0dp"
                            android:layout_width="fill_parent"
                            android:gravity="center_horizontal"
                             android:layout_marginTop="@dimen/layout_marginTop_oppertunities" >

                            <EditText
                                android:id="@+id/projectTitle"
                                android:layout_marginRight="@dimen/layout_marginRight_oppertunities"
                                android:layout_marginLeft="@dimen/layout_marginLeft_oppertunities"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_span="3"
                                android:background="#b0b0b0"
                                android:hint="@string/projectTitle"
                                android:padding="@dimen/android_padding_oppertunities"
                                android:textColor="#000"
                                android:textSize="@dimen/android_textSize_oppertunities" />

                       </TableRow>
                       
                          <!--  Project description-->
                          
                          
                         <TableRow
                            android:layout_height="0dp"
                            android:layout_width="fill_parent"
                            android:gravity="center_horizontal"
                              
                          >

                            <EditText
                                android:id="@+id/description"
                                android:layout_marginTop="@dimen/layout_marginTop_oppertunities"
                                android:layout_marginRight="@dimen/layout_marginRight_oppertunities"
                                android:layout_marginLeft="@dimen/layout_marginLeft_oppertunities"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_span="3"
                                android:background="#b0b0b0"
                                android:hint="@string/projectTitle"
                                android:textColor="#000"
                                android:inputType="textMultiLine" 
   								android:lines="4"
    							android:minLines="2"   
    							android:textSize="@dimen/android_textSize_oppertunities" />    
    					</TableRow>
                       
                         
                         
                            <!--  propertyspinner modulespinner countryspinner -->
                            
                            
                         <TableRow
                              android:layout_marginTop="@dimen/layout_marginTop_oppertunities"
                            android:layout_height="0dp"
                            android:layout_width="fill_parent"
                            android:gravity="center_horizontal" >

                           <Spinner 
           					 android:id="@+id/propertyspinner"
           					   android:layout_marginRight="@dimen/layout_marginRight_oppertunities"
          					 android:layout_width="fill_parent"
          					 android:layout_height="wrap_content"
         					  android:layout_span="1" />

					        <Spinner 
					            android:id="@+id/modulespinner"
					             android:layout_marginRight="@dimen/layout_marginRight_oppertunities"
					           android:layout_width="fill_parent"
					           android:layout_height="wrap_content"
					           android:layout_span="1"/>
					         <Spinner 
					              android:layout_marginRight="@dimen/layout_marginRight_oppertunities"
					            android:id="@+id/countryspinner"
					           android:layout_width="fill_parent"
					           android:layout_height="wrap_content"
					            android:layout_span="1"/>

                       </TableRow>
                       
                          <!--  contact designation -->
                          
                          
                           <TableRow
                              android:layout_marginTop="@dimen/layout_marginTop_oppertunities"
                            android:layout_height="0dp"
                            android:layout_width="fill_parent"
                            android:gravity="center_horizontal"
                            >                                   
                               
						    <EditText						        
                                android:id="@+id/contact"   
                                android:padding="@dimen/android_padding_oppertunities"                                                           
                                 android:layout_marginRight="@dimen/layout_marginRight_oppertunities"
                                android:layout_marginLeft="@dimen/layout_marginLeft_oppertunities"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_span="1"
                                android:background="#b0b0b0"
                                android:hint="@string/contact"
                                android:textSize="@dimen/android_textSize_oppertunities"
                                android:textColor="#000" />					     
					         <EditText
                                android:id="@+id/designation"
                                android:padding="@dimen/android_padding_oppertunities"
                                 android:layout_marginRight="@dimen/layout_marginRight_oppertunities"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_span="2"
                                android:background="#b0b0b0"
                                android:hint="@string/designation"
                                android:textSize="@dimen/android_textSize_oppertunities"
                                android:textColor="#000" />

                       </TableRow>
                       
                            <!--  address1 address2 -->
                            
                            
                           <TableRow
                              android:layout_marginTop="@dimen/layout_marginTop_oppertunities"
                            android:layout_height="0dp"
                            android:layout_width="fill_parent"
                            android:gravity="center_horizontal">                                   
                               
						    <EditText
                                android:id="@+id/address1"
                                 android:padding="10dp"
                                 android:layout_marginRight="@dimen/layout_marginRight_oppertunities"
                                android:layout_marginLeft="@dimen/layout_marginLeft_oppertunities"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_span="1"
                                android:background="#b0b0b0"
                                android:hint="@string/address1"
                                android:textSize="@dimen/android_textSize_oppertunities"
                                android:textColor="#000" />					     
					         <EditText
                                android:id="@+id/address2"
                                android:padding="@dimen/android_padding_oppertunities"
                                 android:layout_marginRight="@dimen/layout_marginRight_oppertunities"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_span="2"
                                android:background="#b0b0b0"
                                android:hint="@string/address2"
                                android:textSize="@dimen/android_textSize_oppertunities"
                                android:textColor="#000" />

                       </TableRow>
                       
                           
                           <!--  county city -->
                           
                           
                           <TableRow
                              android:layout_marginTop="@dimen/layout_marginTop_oppertunities"
                            android:layout_height="0dp"
                            android:layout_width="fill_parent"
                            android:gravity="center_horizontal">                                   
                               
						    <EditText
                                android:id="@+id/county"
                                android:padding="@dimen/android_padding_oppertunities"
                                 android:layout_marginRight="@dimen/layout_marginRight_oppertunities"
                                android:layout_marginLeft="@dimen/layout_marginLeft_oppertunities"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_span="1"
                                android:background="#b0b0b0"
                                android:textSize="@dimen/android_textSize_oppertunities"
                                android:hint="@string/county"
                                android:textColor="#000" />					     
					         <EditText
                                android:id="@+id/city"
                                 android:padding="@dimen/android_padding_oppertunities"
                                 android:layout_marginRight="@dimen/layout_marginRight_oppertunities"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_span="2"
                                android:background="#b0b0b0"
                                android:textSize="@dimen/android_textSize_oppertunities"
                                android:hint="@string/town"
                                android:textColor="#000" />

                       </TableRow>
                       
                           <!--  compcode postcode  dayphone-->
                           
                           
                           <TableRow
                               android:layout_marginTop="@dimen/layout_marginTop_oppertunities"
                            android:layout_height="0dp"
                            android:layout_width="fill_parent"
                            android:gravity="center_horizontal">                                   
                               
						    <EditText
                                android:id="@+id/compcode"
                                 android:padding="@dimen/android_padding_oppertunities"
                                 android:layout_marginRight="@dimen/layout_marginRight_oppertunities"
                                android:layout_marginLeft="@dimen/layout_marginLeft_oppertunities"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_span="1"
                                android:background="#b0b0b0"
                                android:textSize="@dimen/android_textSize_oppertunities"
                                android:hint="@string/compcode"
                                android:textColor="#000" />					     
					         <EditText
                                android:id="@+id/postcode"
                                android:textSize="@dimen/android_textSize_oppertunities"
                                 android:padding="@dimen/android_padding_oppertunities"
                                 android:layout_marginRight="@dimen/layout_marginRight_oppertunities"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_span="1"
                                android:background="#b0b0b0"
                                android:hint="@string/postcode"
                                android:textColor="#000" />
					         <EditText
                                android:id="@+id/dayphone"
                                android:textSize="@dimen/android_textSize_oppertunities"
                                 android:padding="@dimen/android_padding_oppertunities"
                                 android:layout_marginRight="@dimen/layout_marginRight_oppertunities"
                                android:inputType="phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_span="1"
                                android:background="#b0b0b0"
                                android:hint="@string/dayphone"
                                android:textColor="#000" />

                       </TableRow>
                       
                           
                            <!--  emailOppertunities eveningphone  other-->
                            
                            
                           <TableRow
                              android:layout_marginTop="@dimen/layout_marginTop_oppertunities"
                            android:layout_height="0dp"
                            android:layout_width="fill_parent"
                            android:gravity="center_horizontal">                                   
                               
						    <EditText
                                android:id="@+id/emailOppertunities"
                                android:textSize="@dimen/android_textSize_oppertunities"
                                android:padding="@dimen/android_padding_oppertunities"
                                 android:layout_marginRight="@dimen/layout_marginRight_oppertunities"
                                android:layout_marginLeft="@dimen/layout_marginLeft_oppertunities"
                                android:inputType="textEmailAddress"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_span="1"
                                android:background="#b0b0b0"
                                android:hint="@string/eamil"
                                android:textColor="#000" />					     
					         <EditText
                                android:id="@+id/eveningphone"
                                android:textSize="@dimen/android_textSize_oppertunities"
                                android:padding="@dimen/android_padding_oppertunities"
                                 android:layout_marginRight="@dimen/layout_marginRight_oppertunities"
                                android:inputType="phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_span="1"
                                android:background="#b0b0b0"
                                android:hint="@string/eveningphone"
                                android:textColor="#000" />
					         <EditText
                                android:id="@+id/other"
                                android:textSize="@dimen/android_textSize_oppertunities"
                                 android:padding="@dimen/android_padding_oppertunities"
                                 android:layout_marginRight="@dimen/layout_marginRight_oppertunities"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_span="1"
                                android:background="#b0b0b0"
                                android:hint="@string/other"
                                android:textColor="#000" />
                       </TableRow>
                       
                           <!-- Button -->
                       
                           <TableRow
                               android:layout_width="fill_parent"
                               android:layout_height="0dp"
                               android:layout_marginTop="@dimen/layout_marginTop_oppertunities"
                               android:layout_weight="1"
                               android:gravity="right" >
						    
					        <Button
						         android:id="@+id/nextOpportunities"
						         android:background="@color/NextOppertunities"
						         android:layout_width="wrap_content"
						         android:layout_height="wrap_content"
						         android:layout_marginRight="10dip"
						         android:text="@string/next" />
                       </TableRow>
                         
                         
                         
                       
                     
                        
                        
                         
                        
         
                         
      </TableLayout>